# flox

./: Cargo.toml
crates/flutter-plugin/: Cargo.toml
crates/flutter-windows/: Cargo.toml
crates/flutter-windows/src/: lib.rs  window_binding.rs
example/: .gitignore  Cargo.toml  build.rs
example/src/: main.rs
example/windows/: CMakeLists.txt
