[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter-windows = { path = "../crates/flutter-windows" }
raw-window-handle = "0.5"
winit = "0.28"

[build-dependencies]
embed-manifest = "1.3.1"
windres = "0.2.2"
